# students-management-system

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.cache/clangd/index/: dataBase.cpp.23E02D4046ABD694.idx  dataBase.hpp.6498527C94D89BE2.idx  main.cpp.CE75131B3CE2A5B6.idx  student.cpp.33FFF4559F4AE28B.idx  student.hpp.D774C910CFEEC1D3.idx
Headers/: dataBase.hpp  student.hpp
Sources/: dataBase.cpp  main.cpp  student.cpp
src/: dataBase.cpp  main.cpp  student.cpp  student.hpp
